Handle app opcodes less than 00 ff. Previously these were treated as protocol opcodes, causing problems. It turns out when the opcode is 00 00, this seems to be signalling 3 byte opcodes, which are app opcodes where you drop the initial 00, and byte 2 and byte 3 form the app opcode to dispatch.
Handle this on OP_Packet, OP_Oversized, OP_AppCombined, and OP_Combined.
Probably don't need it on OP_Combined, but it shouldn't hurt anything.

Also fixed opcode for OP_DenyResponse which is what found this problem in the
first place.

--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -1,8 +1,10 @@
 Version: $Id$ $Name$
 
-purple (05/15/05)
+purple (05/16/05)
 ---------------------
 + Found OP_SpawnRename again. It's used to rename the Bristlebane jesters
++ Fixed problem in net layer where opcodes were showing up as 0000. Treat 0000
+	as a special case where the app opcode is on the wire next.
 
 purple (05/11/05)
 ----------------------
