--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -7,6 +7,7 @@ purple (05/27/05)
 + Strip the # off the strong of filters as well just to make the # irrevelant
 	to filters (thanks BlueAdept for both these)
 + Cleaned up the help spew for --help. There were some bogus things in there.
++ Cleaned up the status bar exp/aa exp display
 
 purple (05/18/05)
 ---------------------
