Fixed playerSpawnPosStruct with changes from Doodman and delta  wire format changes from FatherNitwit. Also randomly filled in a Discordian Golem in races.h since that's what the dude in the MPG bane trial looks like and reports as.

--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -8,6 +8,8 @@ purple (05/27/05)
 	to filters (thanks BlueAdept for both these)
 + Cleaned up the help spew for --help. There were some bogus things in there.
 + Cleaned up the status bar exp/aa exp display
++ Fixed positioning in playerSpawnPosUpdate. Changed deltaZ and heading
+	so they are correct now (thanks Doodman)
 
 purple (05/18/05)
 ---------------------
