Added two known bugs to BUGS. Changed the Debug message about dropping packets to a Warning. Added some debugging code to packetcapture that is turned off, just so you     can watch and monitor the race between the packet capture thread taking in     packets and the main thread processing them and changing the pcap filter.

--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -14,6 +14,7 @@ purple (06/12/05)
 	are propagated to the spawn list and the map
 + Filled in some missing races with artificial names not taken from the
 	.exe (thanks uRit1u2CBBA=)
++ Added two known bugs to BUGS with descriptions and workarounds
 
 purple (05/18/05)
 ---------------------
