--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -1,21 +1,20 @@
 Version: $Id$ $Name$
 
-purple (06/21/05)
+purple (07/02/05)
 ---------------------
-+ Swapped heading and deltaHeading in spawnStruct (thanks Doodman)
 + Strip the # off names before matching to filters to aid in filter writing
 + Strip the # off the strong of filters as well just to make the # irrevelant
 	to filters (thanks BlueAdept for both these)
 + Cleaned up the help spew for --help. There were some bogus things in there.
 + Cleaned up the status bar exp/aa exp display
-+ Fixed positioning in playerSpawnPosUpdate. Changed deltaZ and heading
-	so they are correct now (thanks Doodman)
 + Added struct for OP_Illusion and a spawnshell handler so that illusions
 	are propagated to the spawn list and the map
 + Filled in some missing races with artificial names not taken from the
 	.exe (thanks uRit1u2CBBA=)
 + Added two known bugs to BUGS with descriptions and workarounds
 + Fixed some long zone names in zones.h and added new zones from .exe
++ Updated all opcodes for 6/29 patch (thanks Doodman, ieatacid)
++ Updated structs for 6/29 patch (spawnStruct, positioning structs mostly)
 
 purple (05/18/05)
 ---------------------
