Fixed the # handling in filters so that instead of stripping #'s off spawns, it instead makes the # in the matchin regex for Name: be optional.

--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -6,6 +6,7 @@ purple (07/03/05)
 + Fixed light member of spawnStruct (thanks BlueAdept)
 + Updated qt required version to 3.2 because I used QString.replace that
 	was added there
++ Rewrote the # stripping stuff from filters so you can still search on #
 
 purple (07/02/05)
 ---------------------
