Couple more things placed back into new spawnStruct.

--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -8,6 +8,7 @@ purple (07/04/05)
 	was added there
 + Rewrote the # stripping stuff from filters so you can still search on #
 + Filled in auto consents into charProfileStruct
++ Filled in a little more of spawnStruct
 
 
 purple (07/02/05)
