Updated version to 5.0.0.24.

--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -1,8 +1,8 @@
 Version: $Id$ $Name$
 
-purple (07/04/05)
+purple (07/07/05)
 --------------------
-+ Updated version to 5.0.0.24pre
++ Updated version to 5.0.0.24
 + Fixed light member of spawnStruct (thanks BlueAdept)
 + Updated qt required version to 3.2 because I used QString.replace that
 	was added there
