--- a/showeq/branches/pre_5_0_beta/ChangeLog
+++ b/showeq/branches/pre_5_0_beta/ChangeLog
@@ -1,5 +1,12 @@
 Version: $Id$ $Name$
 
+purple (07/11/05)
+-------------------
++ Updated version to 5.0.0.25pre
++ Merged in my old alpha netlayer patch which helps with double boxing by
+	enforcing port matches in code for when the pcap filter isn't
+	locked down fast enough because of multithreading
+
 purple (07/07/05)
 --------------------
 + Updated version to 5.0.0.24
