--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,5 +1,11 @@
 Version: $Id$ $Name$
 
+BlueAdept (11/21/07)
+----------------
++ Updated version to 5.11.0
++ Updated structs (ieatacid)
++ Updated character level to 80 (ieatacid)
+
 BlueAdept (11/05/07)
 ----------------
 + Updated version to 5.10.0
