--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,8 @@
+ieatacid (9/22/08)
+----------------
+- Updated version to 5.12.5.2
+- Fixed crash issue that happened if you left a group then zoned
+
 ieatacid (9/16/08)
 ----------------
 - Updated version to 5.12.5.1
