--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,9 @@
+ieatacid (10/12/08)
+----------------
+- Updated version to 5.12.6.0
+- Compatibility with live 10/07
+- Updated structs/opcodes
+
 ieatacid (9/22/08)
 ----------------
 - Updated version to 5.12.5.2
