--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,8 @@
+ieatacid (3/20/09)
+-----------------
+- Updated version to 5.13.3
+- Updated opcodes for 3/19 patch
+
 ieatacid (3/15/09)
 -----------------
 - Updated version to 5.13.2
