--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,9 @@
+ieatacid (6/20/09)
+-----------------
+- Updated version to 5.13.5
+- Updated opcodes (6/12/09)
+- Updated structs
+
 ieatacid (5/25/09)
 -----------------
 - Fixed guild name bug
