--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,9 @@
+ieatacid (10/26/09)
+-----------------
+- Updated version to 5.13.8
+- Updated opcodes
+- Updated spawnIllusionStruct
+
 ieatacid (9/16/09)
 -----------------
 - Updated version to 5.13.7
