--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,10 @@
+ieatacid (2/20/09)
+-----------------
+- Updated version to 5.13.10
+- Fixed structs
+- Fixed code to handle serialized makeDrop struct
+- Added new item codes (uRit1u2CBBA=)
+
 ieatacid (12/25/09)
 -----------------
 - Updated version to 5.13.9.1
